# Scriptor

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  COMMERCIAL-LICENSING.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  MAINTAINERS.md  PRODUCT.md  README.md  SECURITY.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  tsconfig.contracts.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/android/values/: ic_launcher_background.xml
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: canvas.rs  code_chunk.rs  daemon.rs  media.rs  mod.rs
crates/canvas-engine/: Cargo.toml  README.md
crates/canvas-engine/src/: apply.rs  error.rs  hit_test.rs  lib.rs  scene.rs  snapshot.rs  snapshot_raster.rs  store.rs  templates.rs
crates/canvas-engine/tests/: fixtures.rs  template_snapshot.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  term_markdown.rs  tui.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: handler.rs  lib.rs  main.rs  transport.rs
crates/export-runner/: Cargo.toml  README.md
crates/export-runner/assets/: apa-lite.csl
crates/export-runner/src/: args.rs  cancel.rs  diagram_preprocess.rs  error.rs  job.rs  lib.rs  log.rs  pandoc.rs  theme.rs  validate.rs
crates/indexer/: Cargo.toml  README.md
crates/indexer/src/: bibliography.rs  citation.rs  citations.rs  db.rs  dql.rs  error.rs  graph.rs  hash.rs  health.rs  inbox.rs  knowledge.rs  lib.rs  links.rs  migration.rs  notes.rs  parse.rs  rebuild.rs  recent.rs  resolve.rs  schema.rs  search.rs  tags.rs  views.rs
crates/indexer/tests/: health_fixtures.rs  integration.rs
crates/ipc/: Cargo.toml
crates/native-git/: Cargo.toml  README.md
crates/system-bridge/: Cargo.toml  README.md
crates/vault/: Cargo.toml  README.md
crates/vault/src/: config.rs  delete.rs  diagnostics.rs  error.rs  frontmatter_ops.rs  hash.rs  lib.rs  link_rewrite.rs  lint.rs  note.rs  open.rs  patch_log.rs  path.rs  recent.rs  rename.rs  rename_transaction.rs  scan.rs  section_rename.rs  snippets.rs  stats_history.rs  tag_rename.rs  textbundle.rs  views.rs  watch.rs  write.rs
crates/vault/tests/: integration.rs
docs/: CAPABILITIES.md  README.md
docs/architecture/: IPC_DAEMON.md  PERFORMANCE_ARCHITECTURE.md  PLUGIN_SYSTEM.md  TUI_PARITY.md
docs/brand/: BRAND.md
docs/contracts/: COMMAND_CATALOG.md  CONTRACT_GOVERNANCE.md  CONTRACT_INDEX.md
docs/design/: DESIGN_SYSTEM.md  LAYOUT_BLUEPRINTS.md
docs/guides/: GETTING_STARTED.md
docs/release/: PANDOC_STRATEGY.md  SIGNING.md
docs/validation/: ACCESSIBILITY_AUDIT.md
public/: export-theme.css
public/dictionaries/: en_US.dic
scripts/: install-pandoc.ps1
scripts/benchmarks/: README.md  bench-large.ps1  canvas-interaction.ps1  canvas-snapshot.ps1  editor-latency.ps1  export-duration.ps1  idle-memory.ps1  large-note-open.ps1  search.ps1  startup.ps1  vault-scan.ps1
scripts/fixture-import/: README.md  generate-synthetic-vault.ps1
scripts/release/: README.md  export-smoke.ps1  install-bundled-pandoc.ps1  package.ps1  packaged-smoke.ps1  perf-gate.ps1  sign-installers.ps1  smoke.ps1  stage-daemon-sidecar.mjs  stage-daemon-sidecar.ps1  verify-bundle.mjs  verify-manifest.ps1  write-manifest.ps1
scripts/screenshots/: capture.ps1  capture.spec.ts
scripts/validation/: a11y-smoke.mjs  a11y-smoke.ps1  container-smoke.ps1  daemon-smoke.mjs  daemon-smoke.ps1  tui-smoke.mjs  tui-smoke.ps1
src/: App.css  App.tsx  index.css  main.tsx  platform.ts
src/brand/: BrandMark.tsx  identity.ts  support.ts
src/bridge/: canvas.ts  commands.ts  exportEvents.ts  headlessMode.ts  native.ts  vaultEvents.ts
src/components/: AiProviderSettings.tsx  AppToast.tsx  BibliographyPanel.tsx  CanvasPanel.tsx  CheatsheetPanel.tsx  CommandPalette.tsx  ConflictResolverModal.tsx  DaemonOpsPanel.tsx  DiagnosticsPanel.tsx  ExternalChangeBanner.tsx  FrontmatterInspector.tsx  GitDiffPreview.tsx  GitPanel.tsx  GraphPanel.tsx  InsertMenu.tsx  KnowledgeFiltersPanel.tsx  KnowledgeWorkbench.tsx  LinkRewriteDialog.tsx  McpDraftDiff.tsx  McpPanel.tsx  PluginPanel.tsx  PublishCenter.tsx  ReferencesPreviewPanel.tsx  ReleaseQualityPanel.tsx  RenameBlockDialog.tsx  RenameNoteDialog.tsx  RenameSectionDialog.tsx  RenameTagDialog.tsx  (+13 more)
(+120 files in other folders)
