[package]
name = "scriptor-cli"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "scriptor"
path = "src/main.rs"

[dependencies]
scriptor-daemon = { path = "../daemon" }
scriptor-ipc = { path = "../ipc" }
scriptor-system-bridge = { path = "../system-bridge" }
scriptor-export-runner = { path = "../export-runner" }
scriptor-canvas-engine = { path = "../canvas-engine" }
scriptor-indexer = { path = "../indexer" }
scriptor-native-git = { path = "../native-git" }
scriptor-vault = { path = "../vault" }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.28"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"
unicode-width = "0.1"
pulldown-cmark = "0.13"
