[package]
name = "scriptor-export-runner"
version = "0.0.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
