[package]
name = "scriptor-vault"
version = "0.0.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
notify-debouncer-mini = "0.4"
zip = "2"

[dev-dependencies]
tempfile = "3"
