[package]
name = "scriptor-desktop"
version = "0.1.0"
description = "Scriptor desktop shell"
authors = ["Scriptor"]
edition = "2024"

[lib]
name = "scriptor_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
scriptor-export-runner = { path = "../../../crates/export-runner" }
scriptor-canvas-engine = { path = "../../../crates/canvas-engine" }
scriptor-daemon = { path = "../../../crates/daemon" }
scriptor-ipc = { path = "../../../crates/ipc" }
scriptor-system-bridge = { path = "../../../crates/system-bridge" }
scriptor-indexer = { path = "../../../crates/indexer" }
scriptor-native-git = { path = "../../../crates/native-git" }
scriptor-vault = { path = "../../../crates/vault" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
arboard = "3"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }

[package.metadata.tauri]
# Root package metadata for the desktop app.
